...
    let action: () -> Void
    var foregroundColor: Color? = nil
    var isEnabled: Bool = true
    var opacity: Double = 1

    var body: some View {
        Button("返回", systemImage: "chevron.left", action: action)
            .labelStyle(.iconOnly)
            .tint(foregroundColor)
            .disabled(!isEnabled)
            .opacity(opacity)
    }
}
...
